# ipp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
doc/: instructions.md
src/: chart.rs  cli.rs  ip_processor.rs  lib.rs  main.rs
tests/: ip_processor_test.rs
