[package]
name = "ipp"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "IP address processing tool"
license = "MIT"
[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
ipnetwork = "0.20"
ping = "0.5"
local-ip-address = "0.5.4"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
